src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("https://use.typekit.net/zhy0giy.css");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.font-freight {
  font-family: "freight-text-pro", serif;
  font-feature-settings:
    "liga" 1,
    "clig" 1,
    "dlig" 1,
    "hlig" 1,
    "calt" 1;
  font-variant-ligatures: common-ligatures discretionary-ligatures
    historical-ligatures contextual;
  -webkit-font-feature-settings:
    "liga" 1,
    "clig" 1,
    "dlig" 1,
    "hlig" 1,
    "calt" 1;
  -moz-font-feature-settings:
    "liga" 1,
    "clig" 1,
    "dlig" 1,
    "hlig" 1,
    "calt" 1;
}

body {
  background-color: rgb(255 255 255);
  -webkit-font-smoothing: antialiased;
}

.marquee {
  display: flex;
}

.marquee-list {
  display: flex;
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

.marquee-list {
  animation: scroll 45s linear infinite;
}

.marquee-wrapper:hover .marquee-list {
  animation-play-state: paused;
}

.reverse {
  animation-direction: reverse;
}

